--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,13 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="\HRLogin">HR Login</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="\HRReg">SignUp</a></li>
+                <li><a class="dropdown-item" href="\HRReg"> HR SignUp</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="\EmployeeLogin">Employee Login</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="\EmployeeReg">Employee SignUp</a></li>
+
+
               </ul>
             </li>
           </ul>
