added end to end for new emp create

--- a/templates/CreateEmpPersonaldata.html
+++ b/templates/CreateEmpPersonaldata.html
@@ -122,81 +122,66 @@
                 <form action="" method="post">
                     
                     <div class="mb-2">
-                        <label for="employee_id" class="form-label">Employee ID</label>
-                        <input type="number" class="form-control" id="employee_id" name = "employee_id" aria-describedby="emailHelp" required>
+                        <label for="emp_pid" class="form-label">Employee Personal ID</label>
+                        <input type="number" class="form-control" id="emp_pid" name = "emp_pid" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                        <label for="job_id" class="form-label">Job ID</label>
-                        <input type="number" class="form-control" id="job_id" name = "job_id" aria-describedby="emailHelp" required>
+                        <label for="empid" class="form-label">Employee ID</label>
+                        <input type="number" class="form-control" id="empid" name = "empid" aria-describedby="emailHelp" required>
                     </div>
     
                     <div class="mb-2">
-                        <label for="fname" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="fname" name = "fname" aria-describedby="emailHelp" required>
+                        <label for="maritalstat" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="maritalstat" name = "maritalstat" aria-describedby="emailHelp" required>
                     </div>
                     
                     <div class="mb-2">
-                        <label for="mname" class="form-label">Middle Name</label>
-                        <input type="text" class="form-control" id="mname"  name ="mname" aria-describedby="emailHelp" required>
+                        <label for="qualification" class="form-label">Middle Name</label>
+                        <input type="text" class="form-control" id="qualification"  name ="qualification" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="lname" class="form-label">Last Name</label>
-                      <input type="text" class="form-control" id="lname"  name ="lname" aria-describedby="emailHelp" required>
+                      <label for="lastemployer" class="form-label">Last Employer</label>
+                      <input type="text" class="form-control" id="lastemployer"  name ="lname" aria-describedby="lastemployer" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="empemail" class="form-label">Email id</label>
+                      <label for="lastempadd" class="form-label">Last Employer Address</label>
                       <input type="email" class="form-control" id="empemail"  name ="empemail" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="mobileno" class="form-label">Mobile Number</label>
-                      <input type="text" class="form-control" id="mobileno"  name ="mobileno" aria-describedby="emailHelp" required>
-                    </div>
-                  
-
-                    <div class="mb-2">
-                      <label for="doj" class="form-label">Date of joining</label>
-                      <input type="date" class="form-control" id="lname"  name ="lname" aria-describedby="emailHelp" required>
+                      <label for="lastempcont" class="form-label">Last Employer Contact Number</label>
+                      <input type="text" class="form-control" id="mobileno"  name ="lastempcont" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="dol" class="form-label">Date of Leaving</label>
-                      <input type="date" class="form-control" id="dol"  name ="dol" aria-describedby="emailHelp">
+                      <label for="prevrole" class="form-label">Previous Role</label>
+                      <input type="text" class="form-control" id="prevrole"  name ="prevrole" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="managerid" class="form-label">Manager Id</label>
-                      <input type="text" class="form-control" id="managerid"  name ="managerid" aria-describedby="emailHelp" required>
+                      <label for="taxid" class="form-label">Tax Id</label>
+                      <input type="text" class="form-control" id="taxid"  name ="taxid" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="gender" class="form-label">Gender</label>
-                      <input type="text" class="form-control" id="gender"  name ="gender" aria-describedby="emailHelp" required>
+                      <label for="DOB" class="form-label">Date of Birth</label>
+                      <input type="text" class="form-control" id="DOB"  name ="DOB" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="Accleaves" class="form-label">Accrued Leaves</label>
-                      <input type="text" class="form-control" id="Accleaves"  name ="Accleaves" aria-describedby="emailHelp" required>
+                      <label for="nationality" class="form-label">Nationality</label>
+                      <input type="text" class="form-control" id="nationality"  name ="nationality" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
-                      <label for="shiftcd" class="form-label">Shift Code</label>
-                      <input type="text" class="form-control" id="shiftcd"  name ="shiftcd" aria-describedby="emailHelp" required>
+                      <label for="bloddgrp" class="form-label">Blood Group</label>
+                      <input type="text" class="form-control" id="bloddgrp"  name ="bloddgrp" aria-describedby="emailHelp" required>
                     </div>
 
-                    <div class="mb-2">
-                      <label for="deptno" class="form-label">Department No </label>
-                      <input type="text" class="form-control" id="deptno"  name ="deptno" aria-describedby="emailHelp" required>
-                    </div>
-
-                    <div class="mb-2">
-                      <label for="emptypid" class="form-label">Employee Type ID</label>
-                      <input type="text" class="form-control" id="emptypid"  name ="emptypid" aria-describedby="emailHelp" required>
-                    </div>
-              
+                    
 
                     <br>
                    <button type="submit" class="btn btn-primary btn-small btn-block">Save</button>
