added personalhtml changes and calling procedure for it

--- a/templates/CreateEmpPersonaldata.html
+++ b/templates/CreateEmpPersonaldata.html
@@ -132,12 +132,12 @@
                     </div>
     
                     <div class="mb-2">
-                        <label for="maritalstat" class="form-label">First Name</label>
+                        <label for="maritalstat" class="form-label">Marital Status</label>
                         <input type="text" class="form-control" id="maritalstat" name = "maritalstat" aria-describedby="emailHelp" required>
                     </div>
                     
                     <div class="mb-2">
-                        <label for="qualification" class="form-label">Middle Name</label>
+                        <label for="qualification" class="form-label">Qualification</label>
                         <input type="text" class="form-control" id="qualification"  name ="qualification" aria-describedby="emailHelp" required>
                     </div>
 
@@ -148,12 +148,12 @@
 
                     <div class="mb-2">
                       <label for="lastempadd" class="form-label">Last Employer Address</label>
-                      <input type="email" class="form-control" id="empemail"  name ="empemail" aria-describedby="emailHelp" required>
+                      <input type="text" class="form-control" id="lastempadd"  name ="lastempadd" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
                       <label for="lastempcont" class="form-label">Last Employer Contact Number</label>
-                      <input type="text" class="form-control" id="mobileno"  name ="lastempcont" aria-describedby="emailHelp" required>
+                      <input type="text" class="form-control" id="lastempcont"  name ="lastempcont" aria-describedby="emailHelp" >
                     </div>
 
                     <div class="mb-2">
@@ -168,7 +168,7 @@
 
                     <div class="mb-2">
                       <label for="DOB" class="form-label">Date of Birth</label>
-                      <input type="text" class="form-control" id="DOB"  name ="DOB" aria-describedby="emailHelp" required>
+                      <input type="date" class="form-control" id="DOB"  name ="DOB" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
