Changes made to app.py and financedata html file

--- a/templates/financedata.html
+++ b/templates/financedata.html
@@ -141,6 +141,26 @@
                         <label for="bank_acc_id" class="form-label">Bank Account ID</label>
                         <input type="number" class="form-control" id="bank_acc_id" name = "bank_acc_id" aria-describedby="emailHelp" required>
                     </div>
+
+                    <div class="mb-2">
+                      <label for="bank_name" class="form-label">Bank Name</label>
+                      <input type="text" class="form-control" id="bank_name" name = "bank_name" aria-describedby="emailHelp" required>
+                    </div>
+
+                    <div class="mb-2">
+                      <label for="bank_acc_number" class="form-label">Bank Account number</label>
+                      <input type="text" class="form-control" id="bank_acc_number" name = "bank_acc_number" aria-describedby="emailHelp" required>
+                    </div>
+
+                    <div class="mb-2">
+                      <label for="bank_iban" class="form-label">Bank IBAN</label>
+                      <input type="text" class="form-control" id="bank_iban" name = "bank_iban" aria-describedby="emailHelp" required>
+                    </div>
+
+                    <div class="mb-2">
+                      <label for="bank_location" class="form-label">Bank Location</label>
+                      <input type="text" class="form-control" id="bank_location" name = "bank_location" aria-describedby="emailHelp" required>
+                    </div>
     
                     <div class="mb-2">
                         <label for="start_date" class="form-label">Start Date</label>
