Changes made in app.py and CreateEmpRecord

--- a/templates/CreateEmpRecord.html
+++ b/templates/CreateEmpRecord.html
@@ -159,12 +159,7 @@
 
                     <div class="mb-2">
                       <label for="doj" class="form-label">Date of joining</label>
-                      <input type="date" class="form-control" id="lname"  name ="lname" aria-describedby="emailHelp" required>
-                    </div>
-
-                    <div class="mb-2">
-                      <label for="dol" class="form-label">Date of Leaving</label>
-                      <input type="date" class="form-control" id="dol"  name ="dol" aria-describedby="emailHelp">
+                      <input type="date" class="form-control" id="doj"  name ="doj" aria-describedby="emailHelp" required>
                     </div>
 
                     <div class="mb-2">
