EmpAppraisalView updated html page with database read function

--- a/templates/EmpAppraisalView.html
+++ b/templates/EmpAppraisalView.html
@@ -157,25 +157,20 @@
                             </tr>
                         </thead>
                         <tbody>
+                            
                             <tr>
-                                <td><input type="number" class="form-control" placeholder= db_data[0][0]
-                                        readonly>
-                                </td>
-                                <td><input type="number" class="form-control" placeholder="Readonly input here…"
-                                        readonly>
-                                </td>
-                                <td><input type="number" class="form-control" placeholder="Readonly input here…"
-                                        readonly>
-                                </td>
-                                <td><input type="text" class="form-control" placeholder="Readonly input here…" readonly>
-                                </td>
+                                <td>{{appraisal_data[0][0]}}</td>
+                                <td>{{appraisal_data[0][1]}}</td>
+                                <td>{{appraisal_data[0][2]}}</td>
+                                <td>{{appraisal_data[0][3]}}</td>
                             </tr>
+                            
                         </tbody>
                     </table>
                     <div style="text-align:center">
-                        <a href="/delete"><button class="btn btn-primary">Edit</button></a>
+                        <!--<a href="/delete"><button class="btn btn-primary">Edit</button></a>
                         <a href="/delete"><button onclick="return confirm('Sre you sure you want to delete data ??')"
-                                class="btn btn-danger">Delete Entire Data</button></a>
+                                class="btn btn-danger">Delete Entire Data</button></a>-->
                     </div>
 
                 </form>
