--- a/templates/LeaveType.html
+++ b/templates/LeaveType.html
@@ -88,27 +88,18 @@
 </header>
 <section>
 
-  <nav>
-    <ul>
-      <li><a href="CreateEmployee" style="background-color:green;">Add Employee</a></li>
-      <li><a href="DisplayEmpInfo" style="background-color:fuchsia;">Employee Details</a></li>
-      <li><a href="employeelist" style="background-color:grey;">Employee List</a></li>
-      <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
-    </ul>
-  </nav> 
-  
   <article>
     {% with messages = get_flashed_messages() %}
  
     {% if messages %}
 
     {% for message in messages %}
-    <div class="alert alert-success alert-dismissable" role="alert">
+    <!-- <div class="alert alert-success alert-dismissable" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="close">
             <span aria-hidden="true">x</span>
         </button>
     {{message}}
-    </div>
+    </div> -->
     {% endfor %}
     {% endif %}
     {% endwith %}
@@ -122,14 +113,19 @@
                 <h4 class = "text-center">Leaves Details</h4>
                 <form method="POST" action="">
                     <div class="mb-2">
-                        <label for="EmployeeId" class="form-label">Employee ID</label>
-                        <input type="number" class="form-control" id="EmployeeId" name = "EmployeeId" aria-describedby="emailHelp" required>
+                        <label for="LeaveCode" class="form-label">Leave Code</label>
+                        <input type="text" class="form-control" id="leave_code" name = "leave_code" aria-describedby="emailHelp" required>
                     </div>            
     
                     <div class="mb-2">
-                        <label for="leaves_utilised" class="form-label">Leaves Utilised</label>
-                        <input type="number" class="form-control" id="leaves_utilised"  name ="leaves_utilised" aria-describedby="emailHelp" required>
+                        <label for="leaves_description" class="form-label">Leaves Description</label>
+                        <input type="text" class="form-control" id="leaves_description"  name ="leaves_description" aria-describedby="emailHelp" required>
                     </div>
+
+                    <div class="mb-2">
+                      <label for="maximum_leaves_txt" class="form-label">Maximum leaves</label>
+                      <input type="number" class="form-control" id="maximum_leaves_txt"  name ="maximum_leaves_txt" aria-describedby="emailHelp" required>
+                  </div>
     
                     <br>
                    <button type="submit" class="btn btn-primary btn btn-primary btn-small btn-block">Save</button>
