HRD dashboard added Emp performance Create/view

--- a/templates/HRDashboard.html
+++ b/templates/HRDashboard.html
@@ -78,6 +78,14 @@
 					<i class="ph-check-square"></i>
 					<span>Employees</span>
 				</a>
+				<a href="./EmployeeAppraisal.html">
+					<i class="ph-swap"></i>
+					<span>Create Performance Review</span>
+				</a>
+				<a href="./EmpAppraisalView.html">
+					<i class="ph-swap"></i>
+					<span>View Performance Review</span>
+				</a>
 				<a href="../Leaves">
 					<i class="ph-swap"></i>
 					<span>Leaves</span>
