Employee Edit (WIP)

--- a/templates/EmployeeDashboard.html
+++ b/templates/EmployeeDashboard.html
@@ -94,6 +94,10 @@
 					<i class="ph-clipboard-text"></i>
 					<span>Jobs/openings</span>
 				</a>
+				<a href="../employeeddetailsedit">
+					<i class="ph-swap"></i>
+					<span>Edit Profile</span>
+				</a>
 			</nav>
 			
 		</div>
