Employee Create & display changes
edited DisplayEmpInfo Html page and  displayinfo for delete function

--- a/templates/DisplayEmpInfo.html
+++ b/templates/DisplayEmpInfo.html
@@ -90,10 +90,7 @@
 
   <nav>
     <ul>
-      <li><a href="CreateEmployee" style="background-color:green;">Add Employee</a></li>
-      <li><a href="DisplayEmpInfo" style="background-color:fuchsia;">Employee Details</a></li>
-      <li><a href="employeelist" style="background-color:grey;">Employee List</a></li>
-      <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
+           <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
   
@@ -122,7 +119,7 @@
                 <h4 class = "text-center">Search Employee data</h4>
 
                 <form class="d-flex" method="post" action="">
-                    <input class="form-control me-2" type="search" name="eid" placeholder="Enter Employee ID" aria-label="Search">
+                    <input class="form-control me-2" type="search" name="empid" placeholder="Enter Employee ID" aria-label="Search">
                      <br>
                     <button class="btn btn-primary" type="submit">Search</button>
                   </form>
