--- a/templates/HRDashboard.html
+++ b/templates/HRDashboard.html
@@ -78,15 +78,14 @@
 					<i class="ph-check-square"></i>
 					<span>Employees</span>
 				</a>
-				<a href="./EmployeeAppraisal.html">
+				<a href="../EmployeeAppraisal">
 					<i class="ph-swap"></i>
 					<span>Create Performance Review</span>
 				</a>
-				<a href="./EmpAppraisalView.html">
+				<a href="../EmpAppraisalView">
 					<i class="ph-swap"></i>
 					<span>View Performance Review</span>
 				</a>
-				<a href="../Leaves">
 				<a href="../LeaveType">
 					<i class="ph-swap"></i>
 					<span>Leaves</span>
