--- a/templates/EmployeeDashboard.html
+++ b/templates/EmployeeDashboard.html
@@ -78,7 +78,7 @@
 					<i class="ph-check-square"></i>
 					<span>Employees</span>
 				</a>
-				<a href="../Leaves">
+				<a href="../EmployeeLeaveApplication">
 					<i class="ph-swap"></i>
 					<span>Leaves</span>
 				</a>
