changes reagrding EMP  rec update

--- a/templates/employeelist.html
+++ b/templates/employeelist.html
@@ -87,7 +87,7 @@
 
   <nav>
     <ul>
-      <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
+      <li><a class="btn btn-primary" href="Home" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
   
