--- a/templates/EmployeeLeaveApplication.html
+++ b/templates/EmployeeLeaveApplication.html
@@ -118,11 +118,10 @@
 
                     <div class="mb-2">
                       <label for="leave_type">Leave Type</label>
-                      <select type="text" class="form-control" id="leave_type" name="leave_type" required>
+                      <select type="text" class="form-control" id="4" name="leave_type" required>
                         {% for item in data %}
                       <option value="{{item.Leave_code}}">{{item.Leave_code}}</option>
                       {% endfor %}
-
                       </select>
                   </div>
     
