--- a/templates/HRDashboard.html
+++ b/templates/HRDashboard.html
@@ -74,7 +74,7 @@
 					<i class="ph-browsers"></i>
 					<span>Dashboard</span>
 				</a>
-				<a href="#">
+				<a href="../DisplayEmpInfo">
 					<i class="ph-check-square"></i>
 					<span>Employees</span>
 				</a>
