insert, update, delete for finance, department, job modules working end to end, and sp update

--- a/templates/CreateFinanceData.html
+++ b/templates/CreateFinanceData.html
@@ -90,9 +90,9 @@
 
   <nav>
     <ul>
+      <li><a href="DisplayFinanceData" style="background-color:fuchsia;">Display</a></li>
       <li><a href="UpdateFinanceData" style="background-color:green;">Update</a></li>
-      <li><a href="DisplayEmpInfo" style="background-color:fuchsia;">Employee Details</a></li>
-      <li><a href="employeelist" style="background-color:grey;">Employee List</a></li>
+      <li><a href="DeleteFinanceData" style="background-color:grey;">Delete</a></li>
       <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
