--- a/templates/DeleteDeptData.html
+++ b/templates/DeleteDeptData.html
@@ -91,8 +91,8 @@
   <nav>
     <ul>
       <li><a href="DisplayDeptData" style="background-color:fuchsia;">Display</a></li>
-      <li><a href="UpdateDeptData" style="background-color:green;">Update</a></li>
-      <li><a href="DeleteDeptData" style="background-color:grey;">Delete</a></li>
+      <li><a href="CreateDeptData" style="background-color:green;">Create</a></li>
+      <li><a href="UpdateDeptData" style="background-color:grey;">Update</a></li>
       <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
