--- a/templates/DeleteJobData.html
+++ b/templates/DeleteJobData.html
@@ -90,9 +90,9 @@
 
   <nav>
     <ul>
-      <li><a href="DisplayDeptData" style="background-color:fuchsia;">Display</a></li>
-      <li><a href="UpdateDeptData" style="background-color:green;">Update</a></li>
-      <li><a href="DeleteDeptData" style="background-color:grey;">Delete</a></li>
+      <li><a href="DisplayJobData" style="background-color:fuchsia;">Display</a></li>
+      <li><a href="CreateJob" style="background-color:green;">Create</a></li>
+      <li><a href="UpdateJob" style="background-color:grey;">Update</a></li>
       <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
